--- a/src/routes/Reduce/components/ReduceView.scss
+++ b/src/routes/Reduce/components/ReduceView.scss
@@ -22,6 +22,10 @@
 .helpbox.hide-helpbox{
   opacity: 0.0;
   height: 0px;
+  padding: 0;
+  transition: height 500ms 0ms, padding 500ms 0ms, opacity 500ms 0ms;
 
-  transition: height 1000ms 500ms, opacity 500ms 0ms;
+  p, li, button { // tweak for clickable buttons in next helpbox
+    display: none;
+  }
 }
